@@ -1,0 +1,5 @@
+<layers>
+    <layer name="seantis.reservation"
+         interface="seantis.reservation.interfaces.ISeantisReservationSpecific"
+    />
+</layers>
