@@ -191,4 +191,13 @@
         profile="seantis.reservation:default">
     </genericsetup:upgradeStep>
 
+    <genericsetup:upgradeStep
+        title="Import seantis.reservation browserlayer"
+        description=""
+        source="1021"
+        destination="1022"
+        handler=".upgrades.upgrade_1021_to_1022"
+        profile="seantis.reservation:default">
+    </genericsetup:upgradeStep>
+
 </configure>
